tests/snapshots/snapshot_tests__behavior_warp_mouse.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Behavior settings - managed by Nirify

input {
    warp-mouse-to-focus mode="center-xy"
    workspace-auto-back-and-forth false
}
