tests/snapshots/snapshot_tests__cursor_custom.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Cursor settings - managed by Nirify

cursor {
    xcursor-theme "Adwaita"
    xcursor-size 32
    hide-when-typing
    hide-after-inactive-ms 3000
}
