tests/snapshots/snapshot_tests__cursor_default.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Cursor settings - managed by niri-settings-rust

cursor {
    xcursor-size 24
}
