tests/snapshots/snapshot_tests__debug_default.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Debug settings - managed by Nirify

// WARNING: These are advanced options. Use with caution.

// No debug options enabled.
// debug {
//     preview-render
//     disable-cursor-plane
// }
