tests/snapshots/snapshot_tests__environment_empty.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Environment variables - managed by Nirify

// These are set for all processes spawned by niri.

// No environment variables configured.
// Example:
// environment {
//     QT_QPA_PLATFORM "wayland"
//     ELECTRON_OZONE_PLATFORM_HINT "wayland"
// }
