tests/snapshots/snapshot_tests__environment_with_vars.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Environment variables - managed by Nirify

// These are set for all processes spawned by niri.

environment {
    GTK_THEME "Adwaita:dark"
    QT_QPA_PLATFORM "wayland"
}
