tests/snapshots/snapshot_tests__layer_rules_empty.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Layer rules - managed by Nirify
// Rules for layer-shell surfaces (panels, notifications, etc.)

// No layer rules configured yet.
// Add rules through the UI or manually here.
