tests/snapshots/snapshot_tests__misc_custom.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Miscellaneous settings - managed by niri-settings-rust

prefer-no-csd
screenshot-path "~/Pictures/Screenshots"
hotkey-overlay {
    skip-at-startup
}
