tests/snapshots/snapshot_tests__mouse_custom.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Mouse settings - managed by Nirify

input {
    mouse {
        natural-scroll
        accel-speed 0.50
        accel-profile "flat"
        scroll-factor 1.50
    }
}
